# bioinformatics

./: .gitignore  Cargo.toml  README.md
benches/: bench_util.rs  suffix_trie.rs  suffix_trie_simple.rs
proptest-regressions/string/: suffix_trie_compact.txt  suffix_trie_suffix_links.txt
src/: alphabet_model.rs  ascii.rs  genes.rs  genotype.rs  lib.rs  model.rs  polymers.rs  polymers_model.rs  probability.rs  string.rs  string_model.rs  util.rs
src/string/: alignment.rs  border_array.rs  bwt.rs  lcs.rs  suffix_array.rs  suffix_trie.rs  suffix_trie_compact.rs  suffix_trie_mcc_arena.rs  suffix_trie_mcc_petgraph.rs  suffix_trie_mcc_rc.rs  suffix_trie_mcc_refalloc.rs  suffix_trie_simple.rs  suffix_trie_suffix_links.rs  suffix_trie_suffix_links_arena_refs.rs  suffix_trie_suffix_links_refalloc.rs  suffix_trie_suffix_links_ukkonen.rs  suffix_trie_suffix_petgraph.rs  suffix_trie_ukkonen.rs  superstring.rs  superstring_petgraph.rs  superstring_rcrefcell.rs  test_util.rs  trie_compact.rs
src/string/alignment/: global_alignment_hirschberg.rs  global_alignment_simple.rs  global_alignment_wagner_fischer.rs  local_alignment_hirschberg.rs  local_alignment_wagner_fischer.rs
src/string/suffix_trie_suffix_links/: lcs.rs  suffix_array.rs
src/string_model/: test_util.rs
src/template/: bin.rs  inst.sh
src/util/: alloc.rs
