[package]
name = "bioinformatics"
version = "0.1.0"
edition = "2024"

[profile.bench]
debug = true

[dependencies]
itertools = "0.14.0"
reqwest = { version = "0.12.12", features = ["blocking"] }
regex = "1.11.1"
rand = "0.9.0"
petgraph = "0.7.1"
generic-array = "1.2.0"
proptest = "1.6.0"
proptest-derive = "0.5.1"
smallvec = "1.14.0"
hashbrown = "0.15.2"
hdrhistogram = "7.5.4"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "suffix_trie"
harness = false

#[[bench]]
#name = "suffix_trie_suffix_links"
#harness = false